# SafeDB-CI

./: .gitignore  Dockerfile  README.md  action.yml  actions.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  run.py
.github/workflows/: migrations.yml  safedb-validate.yml
docs/: safedb-ci-technical-doc.tex
engine/: cli.py  errors.py  executor.py  lockfile.py  models.py  naming.py  reporter.py  safety.py  schema.py  versioning.py
engine/adapters/: base.py  mysql.py  postgres.py
examples/01_clean_pass/: 001_create_users.sql  002_create_roles.sql  003_create_posts.sql
examples/02_safety_blocked/: 001_create_users.sql  002_dangerous_operations.sql  003_never_runs.sql
examples/03_schema_integrity_fail/: 001_create_teams.sql  002_create_members.sql
examples/04_ordering_fail/: 001_create_users.sql  002_create_roles.sql  004_create_orders.sql
examples/05_execution_fail/: 001_create_accounts.sql  002_broken_syntax.sql  003_never_runs.sql
examples/06_naming_warnings/: 001_create_departments.sql  002_create_employees.sql  003_create_dept_projects.sql
examples/07_dry_run/: 001_create_inventory.sql  002_create_suppliers.sql
log/: README.md  docker-compose.yml  loki-config.yml
migrations/: 001_create_users.sql  002_broken.sql  002_create_roles.sql  002_invalid.sql  003_create_orders.sql  003_create_products.sql  004_create_orders.sql  005_create_audit_log.sql  006_create_sessions.sql
setup_and_reset/: reset_db.sh  setup_env.sh
tests/: cli_test.py  test_execution_mysql.py  test_execution_postgres.py  test_versioning.py
(+13 files in other folders)
