[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safedb-ci"
version = "0.1.0"
description = "SafeDB-CI: A CI guardrail for validating SQL database migrations."
authors = [
    { name = "Your Team Name" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "psycopg[binary]>=3.1",
    "mysql-connector-python>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
]

[project.scripts]
safedb = "engine.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]